infra/ansible/files/telegram-bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegram-bot-deployment
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telegram-bot
  template:
    metadata:
      labels:
        app: telegram-bot
    spec:
      containers:
      - name: telegram-bot
        image: vientoprojects/kubernetes-monitoring-telegram-bot:latest
---
apiVersion: v1
kind: Service
metadata:
  name: telegram-bot
  namespace: monitoring
spec:
  selector:
    app: telegram-bot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
